[tool.poetry]
name = "easytrack"
version = "0.1.0"
description = ""
authors = ["James Hartman <surfsnowpro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.27"
pydantic = "^1.8.2"
fastapi = "^0.70.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
